Documentación del end point para verificar cuenta
